# ChangeLog for net-im/licq
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/licq/ChangeLog,v 1.125 2013/09/10 08:44:35 polynomial-c Exp $

*licq-1.8.0-r1 (10 Sep 2013)

  10 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> -licq-1.8.0.ebuild,
  +licq-1.8.0-r1.ebuild:
  In version 1.8.0 icq protocol support was plugin-ized. Build it by default
  (bug #484450).

  09 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> licq-1.8.0.ebuild:
  Removed ncurses USE flag as console plugin was removed from licq.

*licq-1.8.0 (09 Sep 2013)

  09 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> licq-1.7.1.ebuild,
  +licq-1.8.0.ebuild:
  Version bump. Minor ebuild corrections.

  18 Aug 2013; Manuel Rüger <mrueg@gentoo.org> -licq-1.7.0.ebuild:
  Cleanup.

*licq-1.7.1 (16 Apr 2013)

  16 Apr 2013; Lars Wendler <polynomial-c@gentoo.org> +licq-1.7.1.ebuild:
  Non-maintainer commit: Version bump.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> licq-1.3.8-r1.ebuild,
  licq-1.3.9.ebuild, licq-1.7.0.ebuild:
  Move Qt dependencies to the new category

*licq-1.7.0 (14 Jan 2013)

  14 Jan 2013; Lars Wendler <polynomial-c@gentoo.org> +licq-1.7.0.ebuild,
  metadata.xml:
  non-maintainer commit: Long overdue version bump (bug #339673).

*licq-1.3.9 (17 May 2010)

  17 May 2010; Patrick Lauer <patrick@gentoo.org> +licq-1.3.9.ebuild:
  Bump for #320259

  13 Jan 2010; Raúl Porcel <armin76@gentoo.org> licq-1.3.8-r1.ebuild:
  alpha/ia64/sparc stable wrt #299749

  12 Jan 2010; nixnut <nixnut@gentoo.org> licq-1.3.8-r1.ebuild:
  ppc stable #299749

  05 Jan 2010; Christian Faulhammer <fauli@gentoo.org> licq-1.3.8-r1.ebuild:
  stable x86, bug 299749

  05 Jan 2010; <hwoarang@gentoo.org> licq-1.3.8-r1.ebuild:
  Stable on amd64 wrt bug #299749

*licq-1.3.8-r1 (05 Jan 2010)

  05 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> +licq-1.3.8-r1.ebuild,
  +files/licq-1.3.8-hebrew.patch, +files/licq-1.3.8-memory_leak.patch: